	Fixed bug where setting resize option to false whouldn't properly render the word count.
	Fixed bug where table row type change would produce multiple table section elements.
	Fixed bug where table row type change on multiple rows would add them in incorrect order.
	Fixed bug where fullscreen plugin would maximize the editor on resize after toggling it off.
	Fixed so an error is thrown if users load jQuery after the jQuery version of TinyMCE.
	Fixed so the filetype for media dialog passes out media instead of image as file type.
	Fixed so it's possible to disable the toolbar by setting it to false.
	Fixed so autoresize plugin isn't initialized when the editor is in inline mode.
Version 4.0b3 (2013-05-15)
	Added new optional advanced tab for image dialog with hspace, vspace, border and style.
	Added new change event that gets fired when undo levels are added to editor instances.
	Added new removed_menuitems option enables you to list menu items to remove from menus.
	Added new external_plugins option enables you to specify external locations for plugins.
	Added new language_url option enables you to specify an external location for the language pack.
	Added new table toolbar control that displays a menu for inserting/editing menus.
	Fixed bug where IE 10 wouldn't load files properly from cache.
	Fixed bug where image dialog wouldn't properly remove width/height if blanked.
	Fixed bug where all events wasn't properly unbound when editor instances where removed.
	Fixed bug where data- attributes wasn't working properly in the SaxParser.
	Fixed bug where Gecko wouldn't properly render broken images.
	Fixed bug where Gecko wouldn't produce the same error dialog on paste as other browsers.
	Fixed bug where is wasn't possible to prevent execCommands in beforeExecCommand event.
	Fixed bug where the fullpage_hide_in_source_view option wasn't working in the fullpage plugin.
	Fixed bug where the WindowManager close method wouldn't properly close the top most window.